- [add] time out timer functionality in Options2 tab
- [add] amp view will restore size if set to 'show on startup'
- [add] new Cat/Midi support for Quick Play/Record by Sigi DH1KLM
	- ZZQA 1/0 QuickPlay
	- ZZQB 1/0 QuickRecord
- [add] new option to apply 31dB tx attenuation when output power is increased and PS-A is on
- [add] dBm text colour appearance option for noise floor line
- [fix] lin waterfall palettes should now look better
- [fix] fix an issue which would prevent manually changing TX filter in setup form, it would try to 'validate' whilst typing new value
- [change] wav file recording volume is normalised to ignore RX AF. Note: when muted/0vol recording is 'silent'
- [change] finder will now gather info using multiple threads at a time. Some users were reporting startup time delay
- [change] skinserver now attempts to select skin when downloaded and shows 'wait' mouse pointer whilst changing
- [change] someone in red might show up when it snows from now until the 26th Dec

## v2.10.3.4 Change Log
- [add] show on startup options for ampview and linearity/ps window. Set in the linearity/ps window
- [add] can now ignore 14bit Midi messages. More devices should work. Option in Setup->Serial/Network/Midi CAT->Midi
- [add] can now combine midi control id, channel and status to be used as the control ID. This should allow devices that share controlIDs for multiple buttons/sliders to work. Options in Setup->Serial/Network/Midi CAT->Midi
- [add] certain skins might make it snow !
- [add] option to prevent rx1+rx2 attenuator linking when using diversity. Setting in the diversity form
- [fix] you can now hear rx2 audio when tx'ing on rx1 and setup->rx2->auto mute rx2 on tx is turned off
- [fix] mic phase reverse now calling correct function in WDSP, and can be turned on/off