@@ -6,6 +6,6 @@ namespace Thetis
 { 
     public static class VersionInfo 
     { 
-        public static string BuildDate { get { return "12/01/23"; } }  
+        public static string BuildDate { get { return "12/02/23"; } }  
     } 
 } 
